--- a/Code/Final_EDA_Assignment.html
+++ b/Code/Final_EDA_Assignment.html
@@ -193,7 +193,8 @@ ggplot(data = countries, aes(x = Year, y = income, color=region)) +
 ###1.People tend to live longer after around 1950s. 
 ###2.Europe &amp; East Asia area and America area has longer life expectency than other regions
 ###3.Although impoved around 1950s, Sub-Sahran Africa has the lowest life expenctency for now 
-###4.China and India are having low income comparing to other 4 countries selected. </code></pre>
+###4.China and India are having low income comparing to other 4 countries selected. 
+#GITHUB LINK:https://github.com/cj10011001/ANLY506/tree/master/Code</code></pre>
 </div>
 
 
